footer icon and common hero section

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
 <body>
   <section class="header-top">
     <div class="container">
-      <div class="d-flex gap-2">
+      <div class="d-flex gap-2 justify-content-end">
         <div>
           <a href="" class="text-white nav-link py-1 mr-3">
             <span>
-              Call : +01 123455678990
+              <i class="fa fa-phone mr-1" aria-hidden="true"></i> +01 123455678990
             </span>
           </a>
         </div>
         <div>
           <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
             <span>
-              Email : support@hostflu.net
+              <i class="fa fa-envelope mr-1" aria-hidden="true"></i> support@hostflu.net
             </span>
           </a>
         </div>
@@ -252,7 +252,9 @@
   </div>
   <!-- Domain Search End -->
 
+
   <!-- service section -->
+
   <section class="service_section layout_padding">
     <div class="service_container">
       <div class="container ">
@@ -265,8 +267,8 @@
           </p>
         </div>
         <div class="row">
-          <div class="col-md-4 ">
-            <div class="box ">
+          <div class="col-lg-4 ">
+            <div class="box shadow">
               <div class="img-box">
                 <img src="images/s1.png" alt="">
               </div>
@@ -274,10 +276,10 @@
                 <h5>
                   Shared Hosting
                 </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                <p class="text-justify">
+                  HostFlu excels in shared hosting, offering unparalleled reliability and robust performance for
+                  websites of all sizes. With HostFlu, experience seamless shared hosting solutions that prioritize
+                  speed, security, and customer satisfaction.
                 </p>
                 <a href="">
                   Read More
@@ -285,8 +287,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 ">
-            <div class="box ">
+          <div class="col-lg-4 ">
+            <div class="box shadow">
               <div class="img-box">
                 <img src="images/s2.png" alt="">
               </div>
@@ -294,10 +296,10 @@
                 <h5>
                   Domain Registration
                 </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                <p class="text-justify">
+                  HostFlu excels in domain registration, presenting a continuing and hassle-free experience to secure
+                  your online identity. Trust HostFlu for unmatched reliability, affordability, and a wide range of
+                  domain extensions to choose from.
                 </p>
                 <a href="">
                   Read More
@@ -305,19 +307,19 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 ">
-            <div class="box ">
+          <div class="col-lg-4 ">
+            <div class="box shadow">
               <div class="img-box">
                 <img src="images/s3.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  VP
+                  VPS
                 </h5>
-                <p>
-                  fact that a reader will be distracted by the readable content of a page when looking at its layout.
-                  The
-                  point of using
+                <p class="text-justify">
+                  HostFlu leads the industry in VPS web hosting, offering top-tier reliability, blazing-speedy speeds,
+                  and remarkable customer service. Elevate your online presence with HostFlu's effective VPS
+                  tailor-made for your specific requirements.
                 </p>
                 <a href="">
                   Read More
@@ -338,7 +340,7 @@
   <!-- end service section -->
 
   <!-- Pricing Start -->
-  <section class="py-5">
+  <section class="py-5 pricing-section">
     <div class="container-xxl py-5">
       <div class="container">
         <div class="section-title position-relative text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
@@ -351,14 +353,13 @@
 
         <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
           <li class="nav-item mr-3" role="presentation">
-            <button class="nav-link active border-primary" id="pills-home-tab" data-toggle="pill"
-              data-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Shared
+            <button class="nav-link active border-0" id="pills-home-tab" data-toggle="pill" data-target="#pills-home"
+              type="button" role="tab" aria-controls="pills-home" aria-selected="true">Shared
               Hosting</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link border-primary" id="pills-profile-tab" data-toggle="pill"
-              data-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
-              aria-selected="false">VPS</button>
+            <button class="nav-link border-0" id="pills-profile-tab" data-toggle="pill" data-target="#pills-profile"
+              type="button" role="tab" aria-controls="pills-profile" aria-selected="false">VPS</button>
           </li>
         </ul>
         <div class="tab-content mt-5" id="pills-tabContent">
@@ -366,14 +367,14 @@
             <!-- price list 1 -->
             <div class="row gy-5">
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
                     <i class="fa fa-share-alt text-white"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
-                    <h4 class="font-weight-bold">Share Hosting</h4>
+                    <h4 class="font-weight-bold">Shared Hosting</h4>
                     <p class="mb-0">Eirmod erat dolor amet est clita lorem erat justo rebum elitr eos</p>
                   </div>
                   <div class="text-center border-bottom p-4">
@@ -396,7 +397,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <div class="position-relative shadow rounded border-secondary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -426,7 +427,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -461,7 +462,7 @@
             <!-- price list2 -->
             <div class="row gy-5">
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -491,7 +492,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
-                <div class="position-relative shadow rounded border-secondary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -521,7 +522,7 @@
                 </div>
               </div>
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="position-relative shadow rounded border-primary" style="border-top:5px solid;">
+                <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
@@ -708,151 +709,7 @@
 
   <!-- end why section -->
 
-  <!-- team section -->
-  <!-- <section class="team_section layout_padding">
-    <div class="container-fluid">
-      <div class="heading_container heading_center">
-        <h2 class="">
-          Our <span> Team</span>
-        </h2>
-      </div>
 
-      <div class="team_container">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/team-1.jpg" class="img1" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Joseph Brown
-                </h5>
-                <p>
-                  Marketing Head
-                </p>
-              </div>
-              <div class="social_box">
-                <a href="#">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/team-2.jpg" class="img1" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Nancy White
-                </h5>
-                <p>
-                  Marketing Head
-                </p>
-              </div>
-              <div class="social_box">
-                <a href="#">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/team-3.jpg" class="img1" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Earl Martinez
-                </h5>
-                <p>
-                  Marketing Head
-                </p>
-              </div>
-              <div class="social_box">
-                <a href="#">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="box ">
-              <div class="img-box">
-                <img src="images/team-4.jpg" class="img1" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Josephine Allard
-                </h5>
-                <p>
-                  Marketing Head
-                </p>
-              </div>
-              <div class="social_box">
-                <a href="#">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- end team section -->
-  <!-- Team Start -->
   <div class="container-xxl py-5">
     <div class="container">
       <div class="section-title position-relative text-center mx-auto mb-5 pb-4 wow fadeInUp" data-wow-delay="0.1s"
@@ -1158,10 +1015,12 @@
               <h2>More Information</h2>
             </div>
             <ul class="footer-list">
-              <li>Phone: <a href="tel:+8801719375526">+88 01719375526</a></li>
-              <li>Email: <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li>
-              <li>Support: <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
-              <li>Website: <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-phone mr-1"></i> <a href="tel:+8801719375526">+88 01719375526</a></li>
+              <!-- <li><i class="fa fa-envelope"></i> <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li> -->
+              <li><i class="fa fa-envelope mr-1"></i> <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
+              <li><i class="fa fa-globe mr-1"></i> <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-location-arrow mr-1"></i> <a href="hostflu.net">87/Dhupakala, Sada, Mymensingh</a>
+              </li>
             </ul>
           </div>
         </div>
