--- a/service.html
+++ b/service.html
@@ -38,18 +38,18 @@
 <body class="sub_page">
   <section class="header-top">
     <div class="container">
-      <div class="d-flex gap-2">
+      <div class="d-flex gap-2 justify-content-end">
         <div>
           <a href="" class="text-white nav-link py-1 mr-3">
             <span>
-              Call : +01 123455678990
+              <i class="fa fa-phone mr-1" aria-hidden="true"></i> +01 123455678990
             </span>
           </a>
         </div>
         <div>
           <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
             <span>
-              Email : support@hostflu.net
+              <i class="fa fa-envelope mr-1" aria-hidden="true"></i> support@hostflu.net
             </span>
           </a>
         </div>
@@ -84,11 +84,12 @@
                 <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="pricing.html">Pricing</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html"> About</a>
+              </li>
+
               <!-- <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
               </li> -->
@@ -116,8 +117,15 @@
   </div>
 
 
-  <!-- service section -->
+  <!-- common hero start hero -->
+  <section class="py-5 common-hero about-hero">
+    <div class="container">
+      <h1 class="font-weight-bold text-center">Our Services</h1>
+    </div>
+  </section>
+  <!-- common  hero end -->
 
+  <!-- service section -->
   <section class="service_section layout_padding">
     <div class="service_container">
       <div class="container ">
@@ -133,33 +141,13 @@
           <div class="col-lg-4 ">
             <div class="box shadow">
               <div class="img-box">
-                <img src="images/s1.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5>
-                  Shared Hosting
-                </h5>
-                <p class="text-justify">
-                  HostFlu excels in shared hosting, offering unparalleled reliability and robust performance for
-                  websites of all sizes. With HostFlu, experience seamless shared hosting solutions that prioritize
-                  speed, security, and customer satisfaction.
-                </p>
-                <a href="">
-                  Read More
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 ">
-            <div class="box shadow">
-              <div class="img-box">
                 <img src="images/s2.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
                   Domain Registration
                 </h5>
-                <p class="text-justify">
+                <p class="text-left mt-3">
                   HostFlu excels in domain registration, presenting a continuing and hassle-free experience to secure
                   your online identity. Trust HostFlu for unmatched reliability, affordability, and a wide range of
                   domain extensions to choose from.
@@ -173,13 +161,34 @@
           <div class="col-lg-4 ">
             <div class="box shadow">
               <div class="img-box">
+                <img src="images/s1.png" alt="">
+              </div>
+              <div class="detail-box">
+                <h5>
+                  Shared Hosting
+                </h5>
+                <p class="text-left mt-3">
+                  HostFlu excels in shared hosting, offering unparalleled reliability and robust performance for
+                  websites of all sizes. With HostFlu, experience seamless shared hosting solutions that prioritize
+                  speed, security, and customer satisfaction.
+                </p>
+                <a href="">
+                  Read More
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 ">
+            <div class="box shadow">
+              <div class="img-box">
                 <img src="images/s3.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
                   VPS
                 </h5>
-                <p class="text-justify">
+                <p class="text-left mt-3">
                   HostFlu leads the industry in VPS web hosting, offering top-tier reliability, blazing-speedy speeds,
                   and remarkable customer service. Elevate your online presence with HostFlu's effective VPS
                   tailor-made for your specific requirements.
@@ -254,10 +263,12 @@
               <h2>More Information</h2>
             </div>
             <ul class="footer-list">
-              <li>Phone: <a href="tel:+8801719375526">+88 01719375526</a></li>
-              <li>Email: <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li>
-              <li>Support: <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
-              <li>Website: <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-phone mr-1"></i> <a href="tel:+8801719375526">+88 01719375526</a></li>
+              <!-- <li><i class="fa fa-envelope"></i> <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li> -->
+              <li><i class="fa fa-envelope mr-1"></i> <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
+              <li><i class="fa fa-globe mr-1"></i> <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-location-arrow mr-1"></i> <a href="hostflu.net">87/Dhupakala, Sada, Mymensingh</a>
+              </li>
             </ul>
           </div>
         </div>
