--- a/about.html
+++ b/about.html
@@ -38,18 +38,18 @@
 <body class="sub_page">
   <section class="header-top">
     <div class="container">
-      <div class="d-flex gap-2">
+      <div class="d-flex gap-2 justify-content-end">
         <div>
           <a href="" class="text-white nav-link py-1 mr-3">
             <span>
-              Call : +01 123455678990
+              <i class="fa fa-phone mr-1" aria-hidden="true"></i> +01 123455678990
             </span>
           </a>
         </div>
         <div>
           <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
             <span>
-              Email : support@hostflu.net
+              <i class="fa fa-envelope mr-1" aria-hidden="true"></i> support@hostflu.net
             </span>
           </a>
         </div>
@@ -84,10 +84,10 @@
                 <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pricing.html">Pricing</a>
+                <a class="nav-link" href="about.html"> About</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
@@ -114,6 +114,13 @@
     </header>
     <!-- end header section -->
   </div>
+  <!-- common hero start hero -->
+  <section class="py-5 common-hero about-hero">
+    <div class="container">
+      <h1 class="font-weight-bold text-center">About Us</h1>
+    </div>
+  </section>
+  <!-- common  hero end -->
   <!-- about section -->
   <section class="about_section layout_padding">
     <div class="container  ">
@@ -197,89 +204,113 @@
       </div>
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/city.png" alt="city" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">A/C No : 2202763480001</p>
+                <p class="mb-1 font-weight-normal">Branch : Agent Banking</p>
+                <p class="mb-1 font-weight-normal">Routing No: 225611753</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: CIBLBDDH</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/dutch.png" alt="dbbl" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">A/C No : 1561510125434</p>
+                <p class="mb-1 font-weight-normal">Branch: Mymensingh</p>
+                <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/brac.png" alt="brac" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">A/C No : 4101103585472001</p>
+                <p class="mb-1 font-weight-normal">Branch: Mymensingh</p>
+                <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p>
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">A/C No : +880 1719375526</p>
+                <p class="mb-1 font-weight-normal">Type: Personal</p>
+                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
-              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/nagad.png" alt="nagad" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">A/C No : +880 1719375526</p>
+                <p class="mb-1 font-weight-normal">Type: Personal</p>
+                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
-              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/rocket.png" alt="rocket" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">A/C No : +880 1719375526</p>
+                <p class="mb-1 font-weight-normal">Type: Personal</p>
+                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
-              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/wise.png" alt="Wise" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">Contact: +880 1719375526</p>
+                <p class="mb-1 font-weight-normal">Type: Personal</p>
+                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
               </div>
             </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg">
+          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
-              <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
+              <img src="./images/payoneer.png" alt="payoneer" height="70" class="w-50 d-block m-auto">
               <div class="mt-4">
-                <h4 class="font-weight-bold">The City Bank</h4>
-                <p class="mt-3">Account: <span class="font-weight-bold">12948958753748</span></p>
+                <h6 class="">Name: Ashiquir Rahman</h6>
+                <p class="mb-1 ">Contact: +880 1719375526</p>
+                <p class="mb-1 font-weight-normal">Type: Personal</p>
+                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
               </div>
             </div>
           </div>
@@ -546,10 +577,12 @@
               <h2>More Information</h2>
             </div>
             <ul class="footer-list">
-              <li>Phone: <a href="tel:+8801719375526">+88 01719375526</a></li>
-              <li>Email: <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li>
-              <li>Support: <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
-              <li>Website: <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-phone mr-1"></i> <a href="tel:+8801719375526">+88 01719375526</a></li>
+              <!-- <li><i class="fa fa-envelope"></i> <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li> -->
+              <li><i class="fa fa-envelope mr-1"></i> <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
+              <li><i class="fa fa-globe mr-1"></i> <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-location-arrow mr-1"></i> <a href="hostflu.net">87/Dhupakala, Sada, Mymensingh</a>
+              </li>
             </ul>
           </div>
         </div>
