--- a/pricing.html
+++ b/pricing.html
@@ -38,18 +38,18 @@
 <body class="sub_page">
   <section class="header-top">
     <div class="container">
-      <div class="d-flex gap-2">
+      <div class="d-flex gap-2 justify-content-end">
         <div>
           <a href="" class="text-white nav-link py-1 mr-3">
             <span>
-              Call : +01 123455678990
+              <i class="fa fa-phone mr-1" aria-hidden="true"></i> +01 123455678990
             </span>
           </a>
         </div>
         <div>
           <a href="mailto:support@hostflu.net" class="text-white nav-link py-1 ml-3">
             <span>
-              Email : support@hostflu.net
+              <i class="fa fa-envelope mr-1" aria-hidden="true"></i> support@hostflu.net
             </span>
           </a>
         </div>
@@ -84,10 +84,10 @@
                 <a class="nav-link" href="service.html">Services <span class="sr-only">(current)</span> </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html"> About</a>
+                <a class="nav-link" href="pricing.html">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pricing.html">Pricing</a>
+                <a class="nav-link" href="about.html"> About</a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link" href="team.html">Team</a>
@@ -114,9 +114,15 @@
     </header>
     <!-- end header section -->
   </div>
-
+  <!-- common hero start hero -->
+  <section class="py-5 common-hero about-hero">
+    <div class="container">
+      <h1 class="font-weight-bold text-center">Our Pricing</h1>
+    </div>
+  </section>
+  <!-- common  hero end -->
   <!-- Pricing Start -->
-  <section class="py-5">
+  <section class="py-5 pricing-section">
     <div class="container-xxl py-5">
       <div class="container">
         <div class="section-title position-relative text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s"
@@ -129,14 +135,13 @@
 
         <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
           <li class="nav-item mr-3" role="presentation">
-            <button class="nav-link active border-primary" id="pills-home-tab" data-toggle="pill"
-              data-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Shared
+            <button class="nav-link active border-0" id="pills-home-tab" data-toggle="pill" data-target="#pills-home"
+              type="button" role="tab" aria-controls="pills-home" aria-selected="true">Shared
               Hosting</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link border-primary" id="pills-profile-tab" data-toggle="pill"
-              data-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
-              aria-selected="false">VPS</button>
+            <button class="nav-link border-0" id="pills-profile-tab" data-toggle="pill" data-target="#pills-profile"
+              type="button" role="tab" aria-controls="pills-profile" aria-selected="false">VPS</button>
           </li>
         </ul>
         <div class="tab-content mt-5" id="pills-tabContent">
@@ -146,13 +151,9 @@
               <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
-                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle p-2"
+                    class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
                     style="width: 45px; height: 45px; margin-top: -3px;">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                      <path fill="#63E6BE"
-                        d="M64 32C28.7 32 0 60.7 0 96v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm280 72a24 24 0 1 1 0 48 24 24 0 1 1 0-48zm48 24a24 24 0 1 1 48 0 24 24 0 1 1 -48 0zM64 288c-35.3 0-64 28.7-64 64v64c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V352c0-35.3-28.7-64-64-64H64zm280 72a24 24 0 1 1 0 48 24 24 0 1 1 0-48zm56 24a24 24 0 1 1 48 0 24 24 0 1 1 -48 0z" />
-                    </svg>
+                    <i class="fa fa-share-alt text-white"></i>
                   </div>
                   <div class="text-center border-bottom p-4 pt-5">
                     <h4 class="font-weight-bold">Shared Hosting</h4>
@@ -393,10 +394,12 @@
               <h2>More Information</h2>
             </div>
             <ul class="footer-list">
-              <li>Phone: <a href="tel:+8801719375526">+88 01719375526</a></li>
-              <li>Email: <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li>
-              <li>Support: <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
-              <li>Website: <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-phone mr-1"></i> <a href="tel:+8801719375526">+88 01719375526</a></li>
+              <!-- <li><i class="fa fa-envelope"></i> <a href="mailto:ashiquir81@gmail.com">ashiquir81@gmail.com</a></li> -->
+              <li><i class="fa fa-envelope mr-1"></i> <a href="mailto:support@hostflu.net">support@hostflu.net</a></li>
+              <li><i class="fa fa-globe mr-1"></i> <a href="hostflu.net">www.hostflu.net</a></li>
+              <li><i class="fa fa-location-arrow mr-1"></i> <a href="hostflu.net">87/Dhupakala, Sada, Mymensingh</a>
+              </li>
             </ul>
           </div>
         </div>
