section title color dual to black

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Our <span>Services</span>
+            Our Services
           </h2>
           <p>
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
@@ -564,7 +564,7 @@
     <div class="container  ">
       <div class="heading_container heading_center">
         <h2>
-          About <span>Us</span>
+          About Us
         </h2>
         <p>
           Magni quod blanditiis non minus sed aut voluptatum illum quisquam aspernatur ullam vel beatae rerum ipsum
@@ -607,7 +607,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Why Choose <span>Us</span>
+          Why Choose Us
         </h2>
       </div>
       <div class="why_container">
@@ -785,7 +785,7 @@
     <div class="container">
       <div class="heading_container heading_center psudo_white_primary mb_45">
         <h2>
-          What says our <span>Customers</span>
+          What says our Customers
         </h2>
       </div>
       <!-- <div class="carousel-wrap ">
