all page privacya and term and font style

--- a/about.html
+++ b/about.html
@@ -19,7 +19,11 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 
   <!--owl slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -565,8 +569,8 @@
               <li><a href="service.html">Services</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Term & Conditions</a></li>
+              <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+              <li><a href="terms&condition.html">Term & Conditions</a></li>
             </ul>
           </div>
         </div>
