--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
 
   <!--owl slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -720,7 +724,7 @@
       </div>
       <div class="row g-4">
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-1.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -734,7 +738,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-2.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -748,7 +752,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-3.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -762,7 +766,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
-          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 5px solid">
+          <div class="team-item border-primary rounded shadow overflow-hidden" style="border-top: 2px solid">
             <div class="text-center p-4">
               <img class="img-fluid rounded-circle mb-4" src="images/team-4.jpg" alt="">
               <h5 class="font-weight-bold mb-1">Full Name</h5>
@@ -1003,8 +1007,8 @@
               <li><a href="service.html">Services</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="pricing.html">Pricing</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Term & Conditions</a></li>
+              <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+              <li><a href="terms&condition.html">Term & Conditions</a></li>
             </ul>
           </div>
         </div>
