payment page and some other changes

--- a/index.html
+++ b/index.html
@@ -258,13 +258,12 @@
 
 
   <!-- service section -->
-
   <section class="service_section layout_padding">
     <div class="service_container">
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Our Services
+            Our <span>Services</span>
           </h2>
           <p>
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
@@ -274,19 +273,19 @@
           <div class="col-lg-4 ">
             <div class="box shadow">
               <div class="img-box">
-                <img src="images/s1.png" alt="">
+                <img src="images/s2.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Shared Hosting
+                  Domain Registration
                 </h5>
-                <p class="text-justify">
-                  HostFlu excels in shared hosting, offering unparalleled reliability and robust performance for
-                  websites of all sizes. With HostFlu, experience seamless shared hosting solutions that prioritize
-                  speed, security, and customer satisfaction.
+                <p class="text-left mt-3">
+                  HostFlu excels in domain registration, presenting a continuing and hassle-free experience to secure
+                  your online identity. Trust HostFlu for unmatched reliability, affordability, and a wide range of
+                  domain extensions to choose from.
                 </p>
                 <a href="">
-                  Read More
+                  Continue
                 </a>
               </div>
             </div>
@@ -294,23 +293,24 @@
           <div class="col-lg-4 ">
             <div class="box shadow">
               <div class="img-box">
-                <img src="images/s2.png" alt="">
+                <img src="images/s1.png" alt="">
               </div>
               <div class="detail-box">
                 <h5>
-                  Domain Registration
+                  Shared Hosting
                 </h5>
-                <p class="text-justify">
-                  HostFlu excels in domain registration, presenting a continuing and hassle-free experience to secure
-                  your online identity. Trust HostFlu for unmatched reliability, affordability, and a wide range of
-                  domain extensions to choose from.
+                <p class="text-left mt-3">
+                  HostFlu excels in shared hosting, offering unparalleled reliability and robust performance for
+                  websites of all sizes. With HostFlu, experience seamless shared hosting solutions that prioritize
+                  speed, security, and customer satisfaction.
                 </p>
                 <a href="">
-                  Read More
+                  Continue
                 </a>
               </div>
             </div>
           </div>
+
           <div class="col-lg-4 ">
             <div class="box shadow">
               <div class="img-box">
@@ -320,13 +320,13 @@
                 <h5>
                   VPS
                 </h5>
-                <p class="text-justify">
+                <p class="text-left mt-3">
                   HostFlu leads the industry in VPS web hosting, offering top-tier reliability, blazing-speedy speeds,
                   and remarkable customer service. Elevate your online presence with HostFlu's effective VPS
                   tailor-made for your specific requirements.
                 </p>
                 <a href="">
-                  Read More
+                  Continue
                 </a>
               </div>
             </div>
@@ -340,7 +340,6 @@
       </div>
     </div>
   </section>
-
   <!-- end service section -->
 
   <!-- Pricing Start -->
@@ -895,7 +894,7 @@
           <div class="owl-carousel testimonial-carousel">
             <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
-                style="width: 45px; height: 45px; margin-top: -3px;">
+                style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
               </div>
               <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
@@ -911,7 +910,7 @@
             </div>
             <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
-                style="width: 45px; height: 45px; margin-top: -3px;">
+                style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
               </div>
               <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
@@ -927,7 +926,7 @@
             </div>
             <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
-                style="width: 45px; height: 45px; margin-top: -3px;">
+                style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
               </div>
               <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
@@ -943,7 +942,7 @@
             </div>
             <div class="testimonial-item position-relative rounded p-4 my-4" style="border-top: 2px solid #0080FF">
               <div class="d-flex align-items-center justify-content-center quatation ml-4 bg-primary rounded-circle"
-                style="width: 45px; height: 45px; margin-top: -3px;">
+                style="width: 35px; height: 35px; margin-top: -3px;">
                 <i class="fa fa-quote-left text-white"></i>
               </div>
               <p class="mt-3">Dolor et eos labore, stet justo sed est sed. Diam sed sed dolor stet amet eirmod eos
