--- a/service.html
+++ b/service.html
@@ -157,7 +157,7 @@
                   domain extensions to choose from.
                 </p>
                 <a href="">
-                  Read More
+                  Continue
                 </a>
               </div>
             </div>
@@ -177,7 +177,7 @@
                   speed, security, and customer satisfaction.
                 </p>
                 <a href="">
-                  Read More
+                  Continue
                 </a>
               </div>
             </div>
@@ -198,7 +198,7 @@
                   tailor-made for your specific requirements.
                 </p>
                 <a href="">
-                  Read More
+                  Continue
                 </a>
               </div>
             </div>
@@ -212,7 +212,6 @@
       </div>
     </div>
   </section>
-
   <!-- end service section -->
 
   <!-- Footer Starts Here -->
