--- a/about.html
+++ b/about.html
@@ -207,12 +207,12 @@
         </h2>
       </div>
       <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/city.png" alt="city" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
+              <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
                 <p class="mb-1 ">A/C No : 2202763480001</p>
                 <p class="mb-1 font-weight-normal">Branch : Agent Banking</p>
                 <p class="mb-1 font-weight-normal">Routing No: 225611753</p>
@@ -221,12 +221,12 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/dutch.png" alt="dbbl" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
+              <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
                 <p class="mb-1 ">A/C No : 1561510125434</p>
                 <p class="mb-1 font-weight-normal">Branch: Mymensingh</p>
                 <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
@@ -235,12 +235,12 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/brac.png" alt="brac" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
+              <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
                 <p class="mb-1 ">A/C No : 4101103585472001</p>
                 <p class="mb-1 font-weight-normal">Branch: Mymensingh</p>
                 <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
@@ -249,12 +249,12 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/bkash.png" alt="bkash" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
+              <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
                 <p class="mb-1 ">A/C No : +880 1719375526</p>
                 <p class="mb-1 font-weight-normal">Type: Personal</p>
                 <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
@@ -263,12 +263,12 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/nagad.png" alt="nagad" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
+              <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
                 <p class="mb-1 ">A/C No : +880 1719375526</p>
                 <p class="mb-1 font-weight-normal">Type: Personal</p>
                 <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
@@ -277,12 +277,12 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+        <div class="col-sm-6 col-lg-4 mt-4">
           <div class="shadow border p-2 p-md-3 rounded-lg h-100">
             <div class="">
               <img src="./images/rocket.png" alt="rocket" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
+              <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
                 <p class="mb-1 ">A/C No : +880 1719375526</p>
                 <p class="mb-1 font-weight-normal">Type: Personal</p>
                 <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
@@ -291,30 +291,33 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
-            <div class="">
-              <img src="./images/wise.png" alt="Wise" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
-                <p class="mb-1 ">Contact: +880 1719375526</p>
-                <p class="mb-1 font-weight-normal">Type: Personal</p>
-                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
-                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
+        <!-- last tow card  -->
+        <div class="w-100 d-sm-flex justify-content-center">
+          <div class="col-sm-6 col-lg-4 mt-4">
+            <div class="shadow border p-2 p-md-3 rounded-lg h-100">
+              <div class="">
+                <img src="./images/wise.png" alt="Wise" height="70" class="w-50 d-block m-auto">
+                <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                  <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
+                  <p class="mb-1 ">Contact: +880 1719375526</p>
+                  <p class="mb-1 font-weight-normal">Type: Personal</p>
+                  <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                  <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
-          <div class="shadow border p-2 p-md-3 rounded-lg h-100">
-            <div class="">
-              <img src="./images/payoneer.png" alt="payoneer" height="70" class="w-50 d-block m-auto">
-              <div class="mt-4">
-                <h6 class="">Name: Ashiquir Rahman</h6>
-                <p class="mb-1 ">Contact: +880 1719375526</p>
-                <p class="mb-1 font-weight-normal">Type: Personal</p>
-                <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
-                <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
+          <div class="col-sm-6 col-lg-4 mt-4">
+            <div class="shadow border p-2 p-md-3 rounded-lg h-100">
+              <div class="">
+                <img src="./images/payoneer.png" alt="payoneer" height="70" class="w-50 d-block m-auto">
+                <div class="py-2 mt-5 mx-auto" style="max-width: 220px;">
+                  <h6 class="font-weight-normal">Name: Ashiquir Rahman</h6>
+                  <p class="mb-1 ">Contact: +880 1719375526</p>
+                  <p class="mb-1 font-weight-normal">Type: Personal</p>
+                  <!-- <p class="mb-1 font-weight-normal">Routing No: 090611759</p>
+                  <p class="mb-1 font-weight-normal">SWIFT Code: DBBLBDDH</p> -->
+                </div>
               </div>
             </div>
           </div>
