all hero section and top header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <section class="header-top">
+  <section class="d-none d-sm-block header-top">
     <div class="container">
       <div class="d-flex gap-2 justify-content-end">
         <div>
