--- a/pricing.html
+++ b/pricing.html
@@ -40,7 +40,7 @@
 </head>
 
 <body class="sub_page">
-  <section class="header-top">
+  <section class="d-none d-sm-block header-top">
     <div class="container">
       <div class="d-flex gap-2 justify-content-end">
         <div>
@@ -119,10 +119,8 @@
     <!-- end header section -->
   </div>
   <!-- common hero start hero -->
-  <section class="py-5 common-hero about-hero">
-    <div class="container">
-      <h1 class="font-weight-bold text-center">Our Pricing</h1>
-    </div>
+  <section class="common-hero pricing-hero">
+    <img src="./images/pricing-hero.jpg" alt="" class="img-fluid w-100">
   </section>
   <!-- common  hero end -->
   <!-- Pricing Start -->
@@ -152,7 +150,7 @@
           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
             <!-- price list 1 -->
             <div class="row gy-5">
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.2s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -182,7 +180,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.4s">
                 <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
@@ -212,7 +210,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.6s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -247,7 +245,7 @@
           <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             <!-- price list2 -->
             <div class="row gy-5">
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.2s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
@@ -277,7 +275,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.4s">
                 <div class="position-relative shadow rounded border-secondary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-secondary rounded-circle"
@@ -307,7 +305,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="col-lg-4 col-md-6 wow fadeInUp my-3" data-wow-delay="0.6s">
                 <div class="position-relative shadow rounded border-primary" style="border-top:2px solid;">
                   <div
                     class="d-flex align-items-center justify-content-center position-absolute pricing-icon bg-primary rounded-circle"
