--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 </head>
 
 <body class="sub_page">
-  <section class="header-top">
+  <section class="d-none d-sm-block header-top">
     <div class="container">
       <div class="d-flex gap-2 justify-content-end">
         <div>
@@ -119,12 +119,12 @@
     <!-- end header section -->
   </div>
   <!-- common hero start hero -->
-  <section class="py-5 common-hero about-hero">
-    <div class="container">
-      <h1 class="font-weight-bold text-center">About Us</h1>
-    </div>
+  <section class="common-hero pricing-hero">
+    <img src="./images/pricing-hero.jpg" alt="" class="img-fluid w-100">
   </section>
   <!-- common  hero end -->
+
+
   <!-- about section -->
   <section class="about_section layout_padding">
     <div class="container  ">
