--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -40,7 +40,7 @@
 </head>
 
 <body class="sub_page">
-    <section class="header-top">
+    <section class="d-none d-sm-block header-top">
         <div class="container">
             <div class="d-flex gap-2 justify-content-end">
                 <div>
